IF(NOT DEFINED LOG_FILE)
	SET(LOG_FILE TRUE)
ENDIF(NOT DEFINED LOG_FILE)

IF(NOT DEFINED LOG_TCP)
	SET(LOG_TCP TRUE)
ENDIF(NOT DEFINED LOG_TCP)

IF(NOT DEFINED LOG_SYSLOG)
	SET(LOG_SYSLOG TRUE)
ENDIF(NOT DEFINED LOG_SYSLOG)


IF(LOG_FILE)
	ADD_LIBRARY(log_file SHARED log_file.c)
	TARGET_LINK_LIBRARIES(log_file rt)
	INSTALL(TARGETS log_file
		LIBRARY DESTINATION lib${LIB_SUFFIX}/accel-ppp
	)
ENDIF(LOG_FILE)

IF(LOG_TCP)
	ADD_LIBRARY(log_tcp SHARED log_tcp.c)
	INSTALL(TARGETS log_tcp
		LIBRARY DESTINATION lib${LIB_SUFFIX}/accel-ppp
	)
ENDIF(LOG_TCP)

IF(LOG_SYSLOG)
	ADD_LIBRARY(log_syslog SHARED log_syslog.c)
	INSTALL(TARGETS log_syslog
		LIBRARY DESTINATION lib${LIB_SUFFIX}/accel-ppp
	)
ENDIF(LOG_SYSLOG)

IF(LOG_PGSQL)
	ADD_LIBRARY(log_pgsql SHARED log_pgsql.c)
	TARGET_LINK_LIBRARIES(log_pgsql pq)
	INSTALL(TARGETS log_pgsql
		LIBRARY DESTINATION lib${LIB_SUFFIX}/accel-ppp
	)
ENDIF(LOG_PGSQL)

