IF(NOT DEFINED REDIS)
        SET(REDIS TRUE)
ENDIF(NOT DEFINED REDIS)


IF(REDIS)
        FIND_PACKAGE(PkgConfig REQUIRED)
	PKG_CHECK_MODULES(HIREDIS REQUIRED hiredis)
	PKG_CHECK_MODULES(JSON_C REQUIRED json-c)

        ADD_LIBRARY(redis SHARED redis.c)
	TARGET_LINK_LIBRARIES(redis rt pthread ${HIREDIS_LIBRARIES} ${JSON_C_LIBRARIES})
	TARGET_COMPILE_OPTIONS(redis PUBLIC ${HIREDIS_CFLAGS} ${JSON_C_CFLAGS})
        INSTALL(TARGETS redis
                LIBRARY DESTINATION lib${LIB_SUFFIX}/accel-ppp
        )
ENDIF(REDIS)

