if (NOT DEFINED KDIR)
	set(KDIR "/usr/src/linux")
endif (NOT DEFINED KDIR)

ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/driver/vlan_mon.ko
	COMMAND rm -rf ${CMAKE_CURRENT_BINARY_DIR}/driver
	COMMAND mkdir ${CMAKE_CURRENT_BINARY_DIR}/driver
	COMMAND ln -sf ${CMAKE_CURRENT_SOURCE_DIR}/* ${CMAKE_CURRENT_BINARY_DIR}/driver
	COMMAND make -C ${KDIR} M=${CMAKE_CURRENT_BINARY_DIR}/driver modules
	DEPENDS vlan_mon.c vlan_mon.h
)

ADD_CUSTOM_TARGET(vlan_mon_drv ALL
	DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/driver/vlan_mon.ko
)

INSTALL(CODE "EXECUTE_PROCESS(COMMAND make -C ${KDIR} M=${CMAKE_CURRENT_BINARY_DIR}/drivers/vlan_mon modules_install)")
